--- a/index.html
+++ b/index.html
@@ -101,7 +101,23 @@
     </header>
     <main>
         <section class="jumbotron">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4">
+                        <div class="logo-game">
+                            <img src="img/returnal-hero-banner-logo.png" alt="">
+                        </div>
+                        <div class="descrition-game">
+                            <h2>Rompi il cerchio</h2>
+                            <p>Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5.</p>
+                        </div>
+                        <div class="buy-now">
+                            <input class="btn btn-primary" type="button" value="Acquista ora">
+                        </div>
+                    </div>
+                </div>
 
+            </div>
 
         </section>
 
