aggiunta sezioni console e banner

--- a/index.html
+++ b/index.html
@@ -120,6 +120,94 @@
             </div>
 
         </section>
+        <!-- JUMBOTRON -->
+
+        <section class="play-station5">
+            <div class="container">
+                <div class="row ">
+                    <div class="col-2">
+                        <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                    </div>
+
+                    <div class="col-2">
+                        <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                    </div>
+                </div>
+
+                <div class="row justify-content-center">
+                    <div class="col-8">
+                        <div class="slogan-ps5 text-center">
+                            <h7 class="text-uppercase slogan">play has no limits</h7>
+                            <h2>Ecco la PlayStation 5
+                            </h2>
+                            <p>Tuffati in nuove possibilità di gioco completamente inaspettate</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col-5">
+                        <h2>Console PlayStation 5</h2>
+                        <p>Sperimenta la nuova generazione di incredibili giochi PlayStation.</p>
+                        <input class="btn btn-primary" type="button" value="Maggiori informazioni">
+                    </div>
+                    <div class="col-7">
+                        <img class="console" src="img/playstation-5-thumb.png" alt="Console Plat Station 5">
+                    </div>
+                </div>
+                <div class="row justify-content-between mt-5">
+                    <div class="col-2">
+                        <img src="img/playstation-5-thumb.png" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="img/joypad-thumb.png" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="img/headset-thumb.png" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="img/remote-thumb.png" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="img/camera-thumb.jpg" alt="">
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <section class="banner">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4">
+                        <div class="logo-game">
+                            <img src="img/it-takes-two-logo.png" alt="">
+                        </div>
+                        <div class="descrition-game">
+                            <h2>Un'avventura cooperativa selvaggia ti attende</h2>
+                            <p>Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattafotma chr stravolge il suo genere</p>
+                        </div>
+                        <div class="buy-now">
+                            <input class="btn btn-primary" type="button" value="Acquista ora">
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
+        </section>
 
     </main>
     <footer>
