--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         </section>
         <!-- JUMBOTRON -->
-
+        <!-- PLAY STATION 5 -->
         <section class="play-station5">
             <div class="container">
                 <div class="row ">
@@ -172,12 +172,12 @@
                         <img class="console" src="img/playstation-5-thumb.png" alt="Console Plat Station 5">
                     </div>
                 </div>
-                <div class="row justify-content-between mt-5">
+                <div class="row justify-content-md-between mt-5">
                     <div class="col-4 col-md-2">
                         <img src="img/playstation-5-thumb.png" alt="">
                         <p>Console PS5</p>
                     </div>
-                    <div class=col-4 col-md-2 ">
+                    <div class="col-4 col-md-2">
                         <img src="img/joypad-thumb.png " alt=" ">
                         <p>Controller wireless DualSense<sup>TM</sup></p>
                     </div>
@@ -290,7 +290,7 @@
             <div class="container">
                 <div class="row justify-content-center  text-center">
                     <div class="col-12 col-sm-10 col-xl-7">
-                        <h2>Esplora PlayStation<sup class="ps4-ex">r</sup> 4</h2>
+                        <h2>Esplora PlayStation® 4</h2>
                         <p>Giochi incredibili e intrattenimento senza fine. Non c'è mai stato un momento migliore per giocare sulla tua PS4</p>
                     </div>
                 </div>
@@ -370,7 +370,7 @@
                         <p>Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto.</p>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row gy-5">
                     <div class="col-12 col-md-4">
                         <div class="product-ps4">
                             <img src="img/playstation-store-games-under-20-spotlight.jpg" alt="Discount">
@@ -499,8 +499,8 @@
                         <img src="img/sie-logo.svg" alt="Sony INteractive Entertainment">
                     </div>
                     <div class="sony-text">
-                        <p>Website 2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi dei giochi, nomi commerciali e/o abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o materiale protetto da
-                            copyright dei rispettivi proprietari. Tutti i diritti riservati. <a href="#">Maggiori info</a></p>
+                        <p>Website ©2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi dei giochi, nomi commerciali e/o abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o materiale protetto
+                            da copyright dei rispettivi proprietari. Tutti i diritti riservati. <a href="#">Maggiori info</a></p>
                     </div>
                 </div>
             </div>
